Services/01-simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-loadbalancer
spec:
  selector:
    app: welcome
  type: LoadBalancer
  ports:
  - port: 19080
    targetPort: 80
