Services/02-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-nodeport
spec:
  selector:
    app: welcome
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
