Services/04-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-cluster
spec:
  selector:
    app: welcome
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
