Services/03-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-a-ingress-nontls
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`welcome.trainer.container-training.de`)
    kind: Rule
    services:
    - name: welcome-cluster
      port: 80
